--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
         <li>HELP DESK</li>
         <li>IT-consulting</li>
         <li>backup solutions</li>
+        <li>software as a service (SaaS)</li>
     </ul>
 </body>
 </html>
